--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hatena"
   ],
   "dependencies": {
+    "babel-core": "^5.8.33",
     "codemirror": "^5.7.0",
     "electron-authentication-hatena": "^1.0.3",
     "electron-template-menu": "^1.0.3",
@@ -34,13 +35,13 @@
     "node-fetch": "^1.3.2",
     "node-oauth": "^0.1.3",
     "oauth": "^0.9.14",
-    "react": "^0.13.0",
-    "react-codemirror": "^0.1.5",
-    "react-select": "^0.6.10",
+    "react": "^0.14.2",
+    "react-codemirror": "^0.2.0",
+    "react-dom": "^0.14.2",
+    "react-select": "^0.9.1",
     "request": "^2.63.0"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "electron-prebuilt": "^0.30.7"
+    "electron-prebuilt": "^0.34.3"
   }
 }
