--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "electron-template-menu": "^1.0.3",
     "express": "^4.13.3",
     "fs-jetpack": "^0.7.0",
+    "material-flux": "^1.3.1",
     "node-fetch": "^1.3.2",
     "node-oauth": "^0.1.3",
     "oauth": "^0.9.14",
