--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "node-fetch": "^1.3.2",
     "node-oauth": "^0.1.3",
     "oauth": "^0.9.14",
+    "oauth-signature": "^1.3.1",
+    "qs": "^6.0.1",
     "react": "^0.14.2",
     "react-codemirror": "^0.2.0",
     "react-dom": "^0.14.2",
