--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.13.3",
     "fs-jetpack": "^0.7.0",
     "material-flux": "^1.3.1",
+    "minimist": "^1.2.0",
     "node-fetch": "^1.3.2",
     "node-oauth": "^0.1.3",
     "oauth": "^0.9.14",
