--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "minimist": "^1.2.0",
     "node-fetch": "^1.3.2",
     "node-oauth": "^0.1.3",
+    "node-twitter-api": "^1.6.3",
     "oauth": "^0.9.14",
     "oauth-signature": "^1.3.1",
     "qs": "^6.0.1",
@@ -48,7 +49,8 @@
     "react-dom": "^0.14.2",
     "react-select": "^0.9.1",
     "request": "^2.63.0",
-    "textlint-rule-preset-japanese": "^1.0.1"
+    "textlint-rule-preset-japanese": "^1.0.1",
+    "twitter": "^1.2.5"
   },
   "devDependencies": {
     "electron-prebuilt": "^0.36.1"
