--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node-fetch": "^1.3.2",
     "node-oauth": "^0.1.3",
     "node-twitter-api": "^1.6.3",
+    "notie": "^2.1.0",
     "oauth": "^0.9.14",
     "oauth-signature": "^1.3.1",
     "qs": "^6.0.1",
@@ -50,7 +51,9 @@
     "react-select": "^0.9.1",
     "request": "^2.63.0",
     "textlint-rule-preset-japanese": "^1.0.1",
-    "twitter": "^1.2.5"
+    "tweet-truncator": "^1.0.3",
+    "twitter": "^1.2.5",
+    "twitter-text": "^1.13.2"
   },
   "devDependencies": {
     "electron-prebuilt": "^0.36.1"
