--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "codemirror-textlint": "^1.0.1",
     "electron-authentication-hatena": "^1.0.3",
     "electron-template-menu": "^1.0.3",
+    "electron-window-state": "^2.0.0",
     "express": "^4.13.3",
     "fs-jetpack": "^0.7.0",
     "material-flux": "^1.3.1",
