--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fs-jetpack": "^0.7.0",
     "material-flux": "^1.3.1",
     "minimist": "^1.2.0",
+    "mousetrap": "^1.5.3",
     "node-fetch": "^1.3.2",
     "node-oauth": "^0.1.3",
     "node-twitter-api": "^1.6.3",
