feat(ESDaily) add ESDaily service

--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "electron-window-state": "^2.0.0",
     "express": "^4.13.3",
     "fs-jetpack": "^0.7.0",
+    "js-yaml": "^3.4.6",
     "material-flux": "^1.3.1",
     "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.10.6",
     "mousetrap": "^1.5.3",
     "node-fetch": "^1.3.2",
     "node-oauth": "^0.1.3",
@@ -52,6 +55,7 @@
     "react-dom": "^0.14.2",
     "react-select": "^0.9.1",
     "request": "^2.63.0",
+    "slugg": "^0.1.2",
     "textlint-rule-preset-japanese": "^1.0.1",
     "tweet-truncator": "^1.0.3",
     "twitter": "^1.2.5",
