--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "hatena"
   ],
   "dependencies": {
-    "babel-core": "^5.8.33",
+    "babel-plugin-transform-es2015-destructuring": "^6.3.15",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.3.16",
+    "babel-plugin-transform-es2015-parameters": "^6.3.26",
+    "babel-preset-react": "^6.3.13",
+    "babel-register": "^6.3.13",
     "codemirror": "^5.7.0",
     "codemirror-textlint": "^1.0.1",
     "electron-authentication-hatena": "^2.0.0",
@@ -37,6 +41,7 @@
     "electron-window-state": "^2.0.0",
     "express": "^4.13.3",
     "fs-jetpack": "^0.7.0",
+    "interop-require": "^1.0.0",
     "js-yaml": "^3.4.6",
     "material-flux": "^1.3.1",
     "minimist": "^1.2.0",
