--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-select": "^0.9.1",
     "request": "^2.63.0",
     "slugg": "^0.1.2",
+    "spin.js": "^2.3.2",
     "textlint-rule-preset-japanese": "^1.0.1",
     "tweet-truncator": "^1.0.3",
     "twitter": "^1.2.5",
