--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "twitter-text": "^1.13.2"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react-optimize": "^1.0.1",
     "electron-prebuilt": "^0.36.1",
     "gulp": "^3.9.0",
