--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "codemirror": "^5.7.0",
     "codemirror-textlint": "^1.1.0",
     "electron-authentication-hatena": "^2.0.0",
-    "electron-positioner": "^2.0.3",
+    "electron-positioner": "^3.0.0",
     "electron-template-menu": "^1.0.3",
-    "electron-window-state": "^2.0.0",
+    "electron-window-state": "^3.1.0",
     "express": "^4.13.3",
-    "fs-jetpack": "^0.7.0",
+    "fs-jetpack": "^0.9.2",
     "interop-require": "^1.0.0",
     "js-yaml": "^3.4.6",
     "material-flux": "^1.3.1",
@@ -53,16 +53,16 @@
     "node-fetch": "^1.3.2",
     "node-oauth": "^0.1.3",
     "node-twitter-api": "^1.6.3",
-    "notie": "^2.1.0",
+    "notie": "^3.9.4",
     "oauth": "^0.9.14",
     "oauth-signature": "^1.3.1",
     "qs": "^6.0.1",
-    "react": "^0.14.8",
+    "react": "^15.3.2",
     "react-codemirror": "^0.2.0",
-    "react-dom": "^0.14.8",
+    "react-dom": "^15.3.2",
     "react-select": "^0.9.1",
     "request": "^2.63.0",
-    "slugg": "^0.1.2",
+    "slugg": "^1.0.0",
     "spin.js": "^2.3.2",
     "textlint-rule-preset-japanese": "^1.0.1",
     "tweet-truncator": "^1.0.3",
@@ -72,7 +72,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react-optimize": "^1.0.1",
-    "electron-prebuilt": "^0.36.1",
+    "electron": "^1.4.3",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-if": "^2.0.0"
