perf(babel):use combokeys insteadof mousetrap

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,15 @@
 {
   "presets": [
-    "es2015",
+    [
+      "es2015",
+      {
+        "modules": false
+      }
+    ],
     "react"
+  ],
+  "plugins": [
+    "transform-inline-imports-commonjs"
   ],
   "env": {
     "production": {
