--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-register": "^6.3.13",
     "codemirror": "^5.7.0",
     "codemirror-textlint": "^1.1.0",
+    "combokeys": "^2.4.6",
     "electron-authentication-hatena": "^2.0.0",
     "electron-positioner": "^3.0.0",
     "electron-template-menu": "^1.0.3",
@@ -70,6 +71,7 @@
     "twitter-text": "^1.13.2"
   },
   "devDependencies": {
+    "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react-optimize": "^1.0.1",
     "electron": "^1.4.3",
