--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-transform-es2015-destructuring": "^6.3.15",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.3.16",
     "babel-plugin-transform-es2015-parameters": "^6.3.26",
+    "babel-polyfill": "^6.22.0",
     "babel-preset-react": "^6.3.13",
     "babel-register": "^6.3.13",
     "codemirror": "^5.7.0",
