chore(textlint): use proofdict

--- a/package.json
+++ b/package.json
@@ -65,7 +65,14 @@
     "request": "^2.81.0",
     "slugg": "^1.2.1",
     "spin.js": "^2.3.2",
-    "textlint-rule-preset-japanese": "^1.0.1",
+    "textlint-rule-no-double-negative-ja": "^1.0.5",
+    "textlint-rule-no-doubled-conjunction": "^1.0.2",
+    "textlint-rule-no-doubled-conjunctive-particle-ga": "^1.0.2",
+    "textlint-rule-no-doubled-joshi": "^3.5.1",
+    "textlint-rule-no-mix-dearu-desumasu": "^3.0.3",
+    "textlint-rule-no-nfd": "^1.0.1",
+    "textlint-rule-proofdict": "1.0.2",
+    "textlint-rule-sentence-length": "^1.1.0",
     "tweet-truncator": "^1.0.3",
     "twitter": "^1.7.1",
     "twitter-text": "^1.14.6"
