chore(deps): upgrade babel

--- a/.babelrc
+++ b/.babelrc
@@ -1,23 +1,6 @@
 {
   "presets": [
-    [
-      "es2015",
-      {
-        "modules": false
-      }
-    ],
-    "react"
-  ],
-  "plugins": [
-    "transform-inline-imports-commonjs"
-  ],
-  "env": {
-    "production": {
-      "presets": [
-        "es2015",
-        "react",
-        "react-optimize"
-      ]
-    }
-  }
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ]
 }
