--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "hatena"
   ],
   "dependencies": {
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "babel-plugin-transform-es2015-parameters": "^6.24.1",
-    "babel-polyfill": "^6.22.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.24.1",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-destructuring": "^7.0.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
+    "@babel/plugin-transform-parameters": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "codemirror": "^5.26.0",
     "codemirror-textlint": "^1.2.0",
     "combokeys": "^2.4.6",
@@ -88,9 +89,8 @@
     "twitter-text": "^1.14.6"
   },
   "devDependencies": {
-    "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react-optimize": "^1.0.1",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "electron": "^4.0.1",
     "electron-builder": "^20.38.4",
     "electron-packager": "^13.0.1",
