--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   "bin": {
     "postem": "bin/cmd.js"
   },
+  "browserslist": [
+    "last 2 Chrome versions"
+  ],
   "scripts": {
+    "browser": "NODE_ENV=browser parcel serve src/browser/index.html",
     "build": "NODE_ENV=production gulp build",
     "predist": "npm run build",
     "dist": "electron-builder",
@@ -30,7 +34,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "asocial-bookmark": "^1.1.5",
+    "asocial-bookmark": "^1.3.0",
     "codemirror": "^5.26.0",
     "codemirror-textlint": "^1.2.0",
     "combokeys": "^2.4.6",
@@ -90,6 +94,7 @@
     "gulp-if": "^2.0.0",
     "husky": "^2.1.0",
     "lint-staged": "^8.1.5",
+    "parcel": "^1.12.4",
     "prettier": "^1.17.0"
   },
   "build": {
