--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@textlint/module-interop": "^1.0.2",
     "asocial-bookmark": "^1.3.0",
     "codemirror": "^5.26.0",
     "codemirror-textlint": "^1.2.0",
