--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "browser": "NODE_ENV=browser parcel serve src/browser/index.html",
     "build:browser": "NODE_ENV=browser parcel build src/browser/index.html --out-dir build/browser",
     "build": "NODE_ENV=production gulp build",
+    "build:css": "sass css/index.scss css/index.css",
+    "watch:css": "sass --watch css/index.scss css/index.css",
     "predist": "npm run build",
     "dist": "electron-builder",
     "start": "NODE_ENV=development electron .",
@@ -97,7 +99,8 @@
     "husky": "^2.1.0",
     "lint-staged": "^8.1.5",
     "parcel": "^1.12.4",
-    "prettier": "^1.17.0"
+    "prettier": "^1.17.0",
+    "sass": "^1.26.10"
   },
   "build": {
     "appId": "info.efcl.postem",
