chore(deps): tweet-truncator @ 2.0

--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\""
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
+    "@babel/polyfill": "^7.12.1",
     "@textlint-rule/textlint-rule-no-invalid-control-character": "^1.2.0",
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
-    "@textlint/module-interop": "^1.0.2",
+    "@textlint/module-interop": "^1.2.4",
     "asocial-bookmark": "^1.5.3",
     "codemirror": "^5.26.0",
     "codemirror-textlint": "^1.2.0",
@@ -72,27 +72,26 @@
     "slugg": "^1.2.1",
     "spin.js": "^2.3.2",
     "textlint-rule-ja-unnatural-alphabet": "^2.0.1",
-    "textlint-rule-max-ten": "^2.0.3",
-    "textlint-rule-no-double-negative-ja": "^1.0.5",
-    "textlint-rule-no-doubled-conjunction": "^1.0.2",
-    "textlint-rule-no-doubled-conjunctive-particle-ga": "^1.0.2",
-    "textlint-rule-no-doubled-joshi": "^3.5.1",
-    "textlint-rule-no-mix-dearu-desumasu": "^3.0.3",
+    "textlint-rule-max-ten": "^2.0.4",
+    "textlint-rule-no-double-negative-ja": "^1.0.6",
+    "textlint-rule-no-doubled-conjunction": "^1.0.3",
+    "textlint-rule-no-doubled-conjunctive-particle-ga": "^1.1.1",
+    "textlint-rule-no-doubled-joshi": "^3.8.0",
+    "textlint-rule-no-mix-dearu-desumasu": "^4.0.1",
     "textlint-rule-no-nfd": "^1.0.1",
     "textlint-rule-proofdict": "2.0.4",
-    "textlint-rule-sentence-length": "^2.1.1",
-    "tweet-truncator": "^1.0.3",
-    "twitter": "^1.7.1",
-    "twitter-text": "^1.14.6"
+    "textlint-rule-sentence-length": "^2.2.0",
+    "tweet-truncator": "^2.0.0",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-transform-destructuring": "^7.4.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
-    "@babel/plugin-transform-parameters": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.4.4",
+    "@babel/core": "^7.13.13",
+    "@babel/plugin-transform-destructuring": "^7.13.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "@babel/plugin-transform-parameters": "^7.13.0",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/register": "^7.13.8",
     "electron": "^11.2.0",
     "electron-builder": "^22.9.1",
     "electron-packager": "^15.2.0",
