--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "predist": "npm run build",
     "dist": "electron-builder",
     "start": "NODE_ENV=development electron .",
-    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\""
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
+    "prepare": "git config --local core.hooksPath .githooks"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@electron/remote": "^2.0.1",
     "@textlint-rule/textlint-rule-no-invalid-control-character": "^1.2.0",
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
     "@textlint/module-interop": "^1.2.4",
@@ -86,22 +88,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
-    "@babel/plugin-transform-destructuring": "^7.13.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
-    "@babel/plugin-transform-parameters": "^7.13.0",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
     "@babel/register": "^7.13.8",
-    "electron": "^11.2.0",
-    "electron-builder": "^22.9.1",
-    "electron-packager": "^15.2.0",
+    "electron": "^16.0.1",
+    "electron-builder": "^22.14.5",
+    "electron-packager": "^15.4.0",
     "gulp": "^4.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-if": "^2.0.0",
-    "husky": "^2.1.0",
-    "lint-staged": "^8.1.5",
+    "lint-staged": "^12.0.3",
     "parcel": "^1.12.4",
-    "prettier": "^1.17.0",
+    "prettier": "^2.4.1",
     "sass": "^1.26.10"
   },
   "build": {
@@ -117,17 +115,12 @@
   "prettier": {
     "singleQuote": false,
     "printWidth": 120,
-    "tabWidth": 4
-  },
-  "husky": {
-    "hooks": {
-      "precommit": "lint-staged"
-    }
+    "tabWidth": 4,
+    "trailingComma": "none"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   }
 }
