--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "@electron/remote": "^2.0.1",
+    "@electron/remote": "^2.0.9",
     "@textlint-rule/textlint-rule-no-invalid-control-character": "^1.2.0",
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
     "@textlint/module-interop": "^1.2.4",
@@ -61,7 +61,6 @@
     "moment": "^2.18.1",
     "node-fetch": "^1.7.1",
     "node-oauth": "^0.1.3",
-    "node-twitter-api": "^1.6.3",
     "notie": "^3.9.4",
     "oauth": "^0.9.14",
     "oauth-signature": "^1.3.1",
@@ -84,16 +83,16 @@
     "textlint-rule-proofdict": "2.0.4",
     "textlint-rule-sentence-length": "^2.2.0",
     "tweet-truncator": "^2.0.0",
-    "twitter": "^1.7.1"
+    "twitter-api-v2": "^1.14.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.13",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/register": "^7.13.8",
-    "electron": "^16.0.1",
-    "electron-builder": "^22.14.5",
-    "electron-packager": "^15.4.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.21.0",
+    "electron": "^24.1.2",
+    "electron-builder": "^23.6.0",
+    "electron-packager": "^17.1.1",
     "gulp": "^4.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-if": "^2.0.0",
