--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prepare": "git config --local core.hooksPath .githooks"
   },
   "dependencies": {
+    "@atproto/api": "^0.3.12",
     "@babel/polyfill": "^7.12.1",
     "@electron/remote": "^2.0.9",
     "@textlint-rule/textlint-rule-no-invalid-control-character": "^1.2.0",
