--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "fs-jetpack": "^0.10.3",
     "interop-require": "^1.0.0",
     "js-yaml": "^3.8.4",
+    "korefile": "^2.1.1",
     "material-flux": "^1.3.1",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
